# argusclaw

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_NOTICES.md  deny.toml  prek.toml  rustfmt.toml  skills-lock.json  typos.toml
crates/agent/: Cargo.toml
crates/agent/llm/: error.rs  mod.rs  provider.rs  retry.rs
crates/agent/migrations/: 20260310000000_create_llm_providers.sql
crates/agent/src/: agent.rs  error.rs  lib.rs
crates/agent/tests/: db_sqlite_llm_repository.rs  llm_manager.rs  llm_provenance.rs  llm_provider_module.rs  llm_retry.rs  llm_retry_provenance.rs  secret_crypto.rs
crates/argus-agent/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-agent/src/: approval_state.rs  command.rs  compact.rs  config.rs  error.rs  events.rs  execution.rs  history.rs  lib.rs  one_shot.rs  plan_hook.rs  plan_store.rs  plan_tool.rs  runtime.rs  thread.rs  thread_bootstrap.rs  thread_handle.rs  thread_runtime.rs  thread_trace_store.rs  token_estimate.rs  tokenizer.rs  tool_context.rs  trace.rs  turn.rs  turn_event_store.rs  turn_log_store.rs  types.rs
crates/argus-agent/tests/: integration_test.rs  tokenizer_test.rs  trace_events_test.rs  trace_integration_test.rs  trace_writer_test.rs
crates/argus-approval/: CLAUDE.md  Cargo.toml
crates/argus-approval/src/: error.rs  hook.rs  lib.rs  manager.rs  policy.rs  runtime_allow.rs
crates/argus-auth/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-auth/src/: account.rs  credential.rs  error.rs  lib.rs  token.rs
crates/argus-crypto/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-crypto/src/: cipher.rs  error.rs  key_source.rs  lib.rs
crates/argus-dev/: CLAUDE.md  Cargo.toml
crates/argus-dev/src/: error.rs  lib.rs  turn.rs  workflow.rs
crates/argus-dev/tests/: basic_test.rs
crates/argus-job/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-job/src/: dispatch_tool.rs  error.rs  get_job_result_tool.rs  get_workflow_progress_tool.rs  job_manager.rs  job_runtime_supervisor.rs  lib.rs  list_subagents_tool.rs  scheduler_tool.rs  sse_broadcaster.rs  start_workflow_tool.rs  thread_pool.rs  types.rs  workflow_manager.rs
crates/argus-llm/: AGENTS.md  CLAUDE.md  Cargo.toml  llm.example.toml
crates/argus-llm/scripts/: README.md  demo-retry-events.sh  test-real-retry.sh  test-retry-behavior.sh
crates/argus-llm/src/: lib.rs  manager.rs  retry.rs  secret.rs  test_utils.rs
crates/argus-llm/tests/: provider_token_credentials.rs
crates/argus-log/: CLAUDE.md  Cargo.toml
crates/argus-log/src/: cleaner.rs  lib.rs  models.rs  repository.rs
crates/argus-mcp/: AGENTS.md  ARGUS.md  CLAUDE.md  Cargo.toml
crates/argus-mcp/src/: error.rs  lib.rs  runtime.rs  supervisor.rs  tool_adapter.rs
crates/argus-protocol/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-protocol/src/: account.rs  agent.rs  approval.rs  checkpoint.rs  config.rs  envelope.rs  error.rs  events.rs  hooks.rs  http_client.rs  ids.rs  knowledge.rs  lib.rs  llm.rs  mcp.rs  message_override.rs  plan.rs  provider_resolver.rs  risk_level.rs  safety.rs  ssrf.rs  token_usage.rs  tool.rs  user.rs
crates/argus-repl/: Cargo.toml
crates/argus-repl/src/: lib.rs  main.rs  mock_provider.rs
crates/argus-repository/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-repository/migrations/: 1__init.sql  20260317080035_init.sql  20260317142756_add_turn_logs.sql  20260319120000_add_checkpoint_features.sql  20260319160000_add_thinking_config.sql  20260320000000_add_agents_display_name_unique.sql  20260320000000_drop_approval_and_jobs_agent_id.sql  20260320010000_add_accounts_and_credentials.sql  20260320020000_add_default_provider.sql  20260322000000_add_subagent_columns.sql  20260322000001_add_job_parent_column.sql  20260322000002_add_job_result_column.sql  20260325000000_add_provider_credential_ref.sql  20260325120105_init.sql  20260325130534_session_uuid_migration.sql  20260326160000_add_threads_model_override.sql  20260327000000_add_agents_model_id.sql  20260329160000_persistent_workflow.sql  20260331000001_add_knowledge_repos.sql  20260331120000_add_threads_compact_agent_id.sql  20260401100000_add_mcp_tables.sql  20260411000000_flatten_subagent_persistence.sql  20260423090000_add_admin_settings.sql  20260425120000_agent_runs.sql  2__add_mcp_servers.sql  3__update_mcp_servers_config.sql  4__add_mcp_server_use_sse.sql
crates/argus-repository/postgres_migrations/: 20260502000100_init.sql  20260503000100_add_user_admin_flag.sql
crates/argus-repository/src/: error.rs  lib.rs
crates/argus-repository/tests/: admin_settings.rs  agent_cascade_delete.rs  agent_run_repository.rs  architecture.rs  postgres_repository.rs  postgres_user_isolation.rs  scheduled_message_repository.rs
crates/argus-server/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-server/src/: agent_run_context.rs  app_state.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  resolver.rs  response.rs  server_config.rs  server_core.rs  state.rs  user_context.rs
crates/argus-server/tests/: account_api.rs  architecture.rs  auth_api.rs  authorization_api.rs  bootstrap_api.rs  chat_api.rs  dev_oauth_flow.rs  health_api.rs  management_actions_api.rs  mcp_api.rs  providers_api.rs  runtime_api.rs  scheduled_messages_api.rs  server_config.rs  settings_api.rs  settings_persistence.rs  templates_api.rs  tools_api.rs
crates/argus-session/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-session/src/: lib.rs  manager.rs  provider_resolver.rs  runtime_thread.rs  scheduled_messages.rs  session.rs  user_chat_services.rs
crates/argus-template/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
crates/argus-test-support/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-thread/: CLAUDE.md  Cargo.toml
crates/argus-thread-pool/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/argus-tool/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
crates/argus-turn/: CLAUDE.md  Cargo.toml
crates/argus-web/: CLAUDE.md  Cargo.toml
crates/argus-wing/: AGENTS.md  CLAUDE.md  Cargo.toml  build.rs
crates/claw/: CLAUDE.md  Cargo.toml
crates/cli/: CLAUDE.md  Cargo.toml
(+2171 files in other folders)
