[workspace]
members = ["crates/argus-protocol", "crates/argus-template", "crates/argus-session", "crates/argus-turn", "crates/argus-thread", "crates/argus-llm", "crates/argus-tool", "crates/argus-repository", "crates/argus-approval", "crates/argus-wing", "crates/argus-crypto", "crates/argus-auth", "crates/desktop/src-tauri", "crates/argus-test-support"]
resolver = "3"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
once_cell = "1"
url = "2"
dashmap = "5"
uuid = { version = "1", features = ["serde", "v4"] }
rust-mcp-sdk = "0.9"

[patch.crates-io]
rust-mcp-transport = { path = "third_party/rust-mcp-transport" }
