[workspace]
members = ["crates/argus-protocol", "crates/argus-template", "crates/argus-session", "crates/argus-agent", "crates/argus-llm", "crates/argus-tool", "crates/argus-repository", "crates/argus-wing", "crates/argus-crypto", "crates/argus-auth", "crates/desktop/src-tauri", "crates/argus-test-support", "crates/argus-job"]
resolver = "3"

[workspace.dependencies]
# HTTP / Network
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "stream"] }
thirtyfour = { version = "0.36.1", default-features = false, features = ["reqwest", "rustls-tls", "tokio-multi-threaded"] }
zip = "8.4.0"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "fs", "process", "time", "macros", "test-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
async-trait = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }

# Time / ID / Hash
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

# Collections
dashmap = "6"
tracing = "0.1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
derive_builder = "0.20"

# Utils
glob = "0.3"
once_cell = "1"
url = "2"
regex = "1"
base64 = "0.22"

# Crypto / Security
mac_address = "1.1"
ring = "0.17"
secrecy = "0.8"
subtle = "2"

# Logging extras
tracing-appender = "0.2"
rust_decimal = "1"
dirs = "6"
