[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[package.metadata.third_party.ironclaw_llm]
source = "https://github.com/nearai/ironclaw"
commit = "bcef04b82108222c9041e733de459130badd4cd7"
license = "MIT OR Apache-2.0"
files = ["llm/provider.rs", "llm/error.rs"]
notes = "Vendored, provider-agnostic core derived from ironclaw/src/llm for use as ArgusClaw's stable llm facade."

[dependencies]
async-trait = "0.1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
