[package]
name = "argus-agent"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "argus-turn"
path = "src/bin/turn.rs"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-test-support = { path = "../argus-test-support" }
argus-tool = { path = "../argus-tool" }
argus-llm = { path = "../argus-llm" }
tokio = { workspace = true }
derive_builder = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
tokenizers = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
