[package]
name = "argus-approval"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Approval management for ArgusWing - gates dangerous operations behind human approval"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
