[package]
name = "argus-approval"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Approval management for ArgusWing - gates dangerous operations behind human approval"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
