[package]
name = "argus-auth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-crypto = { path = "../argus-crypto" }
argus-protocol = { path = "../argus-protocol" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "blocking"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
