[package]
name = "argus-auth"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-crypto = { path = "../argus-crypto" }
argus-protocol = { path = "../argus-protocol" }
async-trait = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
