[package]
name = "argus-crypto"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
dirs = { workspace = true }
mac_address = { workspace = true }
ring = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
