[package]
name = "argus-dev"
version = "0.1.0"
edition = "2021"
description = "Development and testing tools for ArgusWing"

[dependencies]
# Internal crates
argus-wing = { path = "../argus-wing" }
argus-turn = { path = "../argus-turn" }
argus-protocol = { path = "../argus-protocol" }
argus-tool = { path = "../argus-tool" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Error handling
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
