[package]
name = "argus-job"
version = "0.1.0"
edition = "2024"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-turn = { path = "../argus-turn" }
argus-llm = { path = "../argus-llm" }
argus-template = { path = "../argus-template" }
argus-tool = { path = "../argus-tool" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
