[package]
name = "argus-job"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-turn = { path = "../argus-turn" }
argus-llm = { path = "../argus-llm" }
argus-repository = { path = "../argus-repository" }
argus-template = { path = "../argus-template" }
argus-tool = { path = "../argus-tool" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
