[package]
name = "argus-llm"
version = "0.1.0"
edition = "2024"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eventsource-stream = "0.2"
futures-util = "0.3"
mac_address = "1.1"
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
ring = "0.17"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[features]
default = []
dev = []
