[package]
name = "argus-llm"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "argus-llm"
path = "src/bin/cli.rs"

[[example]]
name = "test_real_retry"
path = "../../examples/test_real_retry.rs"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-test-support = { path = "../argus-test-support" }
argus-crypto = { path = "../argus-crypto" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
eventsource-stream = "0.2"
futures-util = "0.3"
rand = "0.10.0"
reqwest = { workspace = true, features = ["json", "stream"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
