[package]
name = "argus-llm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "argus-llm"
path = "src/bin/cli.rs"

[[example]]
name = "test_real_retry"
path = "../../examples/test_real_retry.rs"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-test-support = { path = "../argus-test-support" }
argus-crypto = { path = "../argus-crypto" }
argus-auth = { path = "../argus-auth" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
rand = "0.10.0"
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
sqlx = { workspace = true, features = ["sqlite"] }
