[package]
name = "argus-log"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
