[package]
name = "argus-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-repository = { path = "../argus-repository" }
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
rmcp = { version = "1.3.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
