[package]
name = "argus-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
serde_json = "1"
