[package]
name = "argus-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures-core = "0.3"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
