[package]
name = "argus-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
