[package]
name = "argus-repository"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Argus crates
argus-protocol = { path = "../argus-protocol" }
argus-llm = { path = "../argus-llm" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
