[package]
name = "argus-repository"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "postgres", "uuid", "runtime-tokio-rustls", "migrate", "macros"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Argus crates
argus-protocol = { path = "../argus-protocol" }
argus-crypto = { path = "../argus-crypto" }

[dev-dependencies]
tokio = { workspace = true }
