[package]
name = "argus-server"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-auth = { path = "../argus-auth" }
argus-crypto = { path = "../argus-crypto" }
argus-job = { path = "../argus-job" }
argus-llm = { path = "../argus-llm" }
argus-mcp = { path = "../argus-mcp" }
argus-protocol = { path = "../argus-protocol" }
argus-repository = { path = "../argus-repository" }
argus-session = { path = "../argus-session" }
argus-template = { path = "../argus-template" }
argus-thread-pool = { path = "../argus-thread-pool" }
argus-tool = { path = "../argus-tool" }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true }
