[package]
name = "argus-session"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-template = { path = "../argus-template" }
argus-thread = { path = "../argus-thread" }
argus-tool = { path = "../argus-tool" }
argus-turn = { path = "../argus-turn" }
argus-llm = { path = "../argus-llm" }
argus-job = { path = "../argus-job" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
