[package]
name = "argus-session"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-repository = { path = "../argus-repository" }
argus-template = { path = "../argus-template" }
argus-agent = { path = "../argus-agent" }
argus-tool = { path = "../argus-tool" }
argus-llm = { path = "../argus-llm" }
argus-job = { path = "../argus-job" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tempfile = "3"
