[package]
name = "argus-template"
version = "0.1.0"
edition = "2021"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
