[package]
name = "argus-test-support"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
async-trait = { workspace = true }
futures-util = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
