[package]
name = "argus-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-turn = { path = "../argus-turn" }
argus-tool = { path = "../argus-tool" }
tokio = { version = "1", features = ["sync", "rt"] }
derive_builder = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
rust_decimal = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
