[package]
name = "argus-thread"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
argus-turn = { path = "../argus-turn" }
argus-tool = { path = "../argus-tool" }
tokio = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
