[package]
name = "argus-tool"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "argus-chrome-cli"
path = "src/bin/chrome_cli.rs"

[dependencies]
argus-protocol = { path = "../argus-protocol" }
async-trait = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
thirtyfour = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
