[package]
name = "argus-wing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified entry point for ArgusWing application"

[features]
default = []

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }

# Internal crates
argus-protocol = { path = "../argus-protocol" }
argus-llm = { path = "../argus-llm" }
argus-template = { path = "../argus-template" }
argus-session = { path = "../argus-session" }
argus-tool = { path = "../argus-tool" }
argus-agent = { path = "../argus-agent" }
argus-repository = { path = "../argus-repository" }
argus-auth = { path = "../argus-auth" }
argus-crypto = { path = "../argus-crypto" }
argus-job = { path = "../argus-job" }

[dev-dependencies]
tempfile = "3"
