[package]
name = "claw"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[package.metadata.third_party.ironclaw_llm]
source = "https://github.com/nearai/ironclaw"
commit = "bcef04b82108222c9041e733de459130badd4cd7"
license = "MIT OR Apache-2.0"
files = ["src/llm/provider.rs", "src/llm/error.rs", "src/llm/retry.rs"]
notes = "Vendored, provider-agnostic core derived from ironclaw/src/llm for use as ArgusClaw's stable llm facade, including retry decoration."

[dependencies]
async-graphql = "7"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
dashmap = "6"
derive_builder = "0.20"
dirs = "6"
futures-core = "0.3"
futures-util = "0.3"
glob = "0.3"
mac_address = "1.1"
rand = "0.10.0"
regex = "1"
ring = "0.17"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["time", "macros", "rt", "sync", "process"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
eventsource-stream = { version = "0.2", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"], optional = true }

[features]
default = []
dev = []
openai-compatible = ["dep:eventsource-stream", "dep:reqwest"]

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
