[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arguswing"
path = "src/main.rs"

[dependencies]
anyhow = "1"
argus-dev = { path = "../argus-dev", optional = true }
argus-protocol = { path = "../argus-protocol" }
argus-thread = { path = "../argus-thread" }
argus-tool = { path = "../argus-tool" }
argus-turn = { path = "../argus-turn", optional = true }
argus-wing = { path = "../argus-wing", features = ["dev"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures-util = { version = "0.3", optional = true }
owo-colors = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "migrate"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
toml = { version = "0.8", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
dev = ["dep:argus-dev", "dep:argus-turn", "dep:futures-util", "dep:owo-colors", "dep:serde_json", "dep:sqlx", "dep:toml", "argus-wing/dev"]
